--- a/app/views/will_filter/filter/_conditions.html.erb
+++ b/app/views/will_filter/filter/_conditions.html.erb
@@ -12,7 +12,7 @@
   <div class="filter_match_type">
     <div class="end">
       <small>
-        <%=link_to_function("Toggle Conditions", "wfFilter.toggleDebugger()") %>
+        <%=link_to("Toggle Conditions", "#", :onclick => "wfFilter.toggleDebugger();") %>
       </small>
     </div>
     Match <%= select_tag(:wf_match, options_for_select(wf_filter.match_options, wf_filter.match), {:onChange=>"wfFilter.markDirty()"}) %>
