--- a/app/views/will_filter/filter/_conditions_footer.html.erb
+++ b/app/views/will_filter/filter/_conditions_footer.html.erb
@@ -5,11 +5,13 @@
   Per Page:
   <%= select_tag(:wf_per_page, options_for_select(wf_filter.per_page_options, wf_filter.per_page.to_s), {:onChange=>"markDirty()"}) %>
   &nbsp;&nbsp;
-  <%=link_to_function("<span>Submit Filter</span>".html_safe, "wfFilter.submit()", :class => "wf_grey_button wf_pcb") %>
+  <%=link_to("<span>Submit Filter</span>".html_safe, "#", :onclick => "wfFilter.submit();", :class => "wf_grey_button wf_pcb") %>
 </div>
 <div>
-  <%=link_to_function("<span><b>&plus;</b> Add</span>".html_safe, "wfFilter.addCondition()", :class => "wf_grey_button wf_pcb") %>
-  <%=link_to_function("<span>Clear</span>".html_safe, "wfFilter.removeAllConditions()", :class => "wf_grey_button wf_pcb") %>
+  <%=link_to("<span><b>&plus;</b> Add</span>".html_safe, '#', { :onclick => "wfFilter.addCondition();", :class =>  "wf_grey_button wf_pcb" }) %>
+  
+  <%=link_to("<span>Clear</span>".html_safe, "#", :onclick => "wfFilter.removeAllConditions(); return false;", :class => "wf_grey_button wf_pcb") %>
+
   &nbsp;&nbsp;
   <span id="wf_loader" class="spinner" style="display:none;">
     <%=image_tag "will_filter/spinner.gif" %> Loading...
