--- a/app/views/will_filter/filter/_conditions_header.html.erb
+++ b/app/views/will_filter/filter/_conditions_header.html.erb
@@ -16,16 +16,16 @@
 <div class="header">
   <% if wf_filter.show_export_options? %>
     <div class="end" style="padding-left:3px;">
-      <%=link_to_function("<span>Export Data...</span>".html_safe, "wfExporter.show(this)", :class => "wf_grey_button wf_pcb") %>
+      <%=link_to("<span>Export Data...</span>".html_safe, "#", :onclick => "wfExporter.show(this)", :class => "wf_grey_button wf_pcb") %>
     </div>  
   <% end %>
   
   <% if wf_filter.show_save_options? %>
     <div class="end">
-      <%=link_to_function("<span>Save As New...</span>".html_safe, "wfFilter.saveFilter()", :class => "wf_grey_button wf_pcb") %>
+      <%=link_to("<span>Save As New...</span>".html_safe, "#", :onclick => "wfFilter.saveFilter();", :class => "wf_grey_button wf_pcb") %>
       <% if wf_filter.id %>
-        <%=link_to_function("<span>Update</span>".html_safe, "wfFilter.updateFilter()", :class => "wf_grey_button wf_pcb") %>
-        <%=link_to_function("<span>Delete</span>".html_safe, "wfFilter.deleteFilter()", :class => "wf_grey_button wf_pcb") %>
+        <%=link_to("<span>Update</span>".html_safe, "#", :onclick => "wfFilter.updateFilter();", :class => "wf_grey_button wf_pcb") %>
+        <%=link_to("<span>Delete</span>".html_safe, "#", :onclick => "wfFilter.deleteFilter();", :class => "wf_grey_button wf_pcb") %>
       <% end %>
     </div>
   <% end %>
