--- a/app/views/will_filter/common/_results_table.html.erb
+++ b/app/views/will_filter/common/_results_table.html.erb
@@ -4,10 +4,11 @@
 <table class='wf_paginator'>
     <tr>
         <td style='text-align:left;vertical-align:middle;'>
-            <%= paginate(results) %>
+            <%= will_paginate(results) %>
+            
         </td>
         <td style='text-align:right;vertical-align:middle;'>
-						Showing <%= results.offset_value + 1 %> - <%= results.offset_value + results.length %> of <%= results.total_count %>
+            Showing <%= results.offset + 1 %> - <%= results.offset + results.length %> of <%= results.total_entries %>
         </td>
     </tr>
 </table>
